--- a/css/styles.css
+++ b/css/styles.css
@@ -137,7 +137,7 @@ h4 {  /* choose three */
 	text-align: center;
 }
 
-h5 {  /* the "item" */
+h5 {  /* the "object" */
 	font-family: 'Goudy Bookletter 1911', serif;
 	font-size: 60px;
 	color: #fff;
