object names + displaying object name in menu

--- a/css/styles.css
+++ b/css/styles.css
@@ -219,8 +219,12 @@ p {
 	position: absolute;
 }
 
-.hover {
+.selected {
 	position: absolute;
+	display: none;
+}
+
+.hidden {
 	display: none;
 }
 
